[package]
name = "xtodo"
version = "0.3.2"
authors = ["ZapAnton <wc3ft2@gmail.com>"]
description = "An utility to track outdated or unimplemented exercises on the various Exercism tracks"
edition = "2018"

[dependencies]
clap = "2.32.0"
reqwest = "0.9.4"
serde_json = "1.0"
serde_yaml = "0.8.7"
toml = "0.4"
failure = "0.1.3"
failure_derive = "0.1.3"
